issue with product dto changes
